<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Inventory App</string>

    <!-- Label for overflow menu option that inserts fake item data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all item data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All items</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a item [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding an item</string>

    <!-- Title for the activity to add a new item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_item">Add an item</string>

    <!-- Title for the activity to edit an existing item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_item">Edit item</string>

    <!-- Label for editor menu option to save item and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current item [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new item has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_item_successful">item saved</string>

    <!-- Toast message in editor when new item has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_item_failed">Error with saving item</string>

    <!-- Toast message in editor when current item was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_item_successful">item updated</string>

    <!-- Toast message in editor when current item has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_item_failed">Error with updating item</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current item [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current item was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_successful">item deleted</string>

    <!-- Toast message in editor when current item has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_failed">Error with deleting item</string>

    <!-- Dialog message to ask the user to confirm deleting the current item [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this item?</string>

    <!-- Dialog button text for the option to confirm deleting the current item [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current item [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_gender">Gender</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_measurement">Measurement</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_name">Name</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_price">Price</string>

    <string name="price_in_dollars">Price in $</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_quantity">Quantity</string>

    <!-- Units for weight of the item (kilograms) [CHAR LIMIT=5] -->
    <string name="hint_supplier">Supplier</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_nr">Supplier Nr</string>

    <string name="sold_button">Sale</string>

    <string name="edit_button">Edit</string>

    <string name="minus_button">-</string>

    <string name="plus_button">+</string>

    <string name="sell_product_failed">No stock available!</string>

    <string name="no_negative_values">No negative values!</string>

    <string name="contact_supplier">Contact Supplier</string>

    <string name="empty_field">No empty fields!</string>

    <string name="didnt_save_empty_field">Did not save. No empty fields!</string>


</resources>
