<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_name"/>

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_name"
                android:hint="@string/hint_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_in_dollars"/>

            <!-- price field -->
            <EditText
                android:id="@+id/edit_price"
                android:hint="@string/hint_price"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_quantity"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/minus_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minus_button" />

                <!-- quantity field -->
                <EditText
                    android:id="@+id/edit_quantity"
                    android:hint="@string/hint_quantity"
                    android:inputType="number"
                    style="@style/EditorFieldStyle" />

                <Button
                    android:id="@+id/plus_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plus_button" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_supplier"/>

            <!-- supplier field -->
            <EditText
                android:id="@+id/edit_supplier"
                android:hint="@string/hint_supplier"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_supplier_nr"/>

            <!-- supplier nr field -->
            <EditText
                android:id="@+id/edit_supplier_nr"
                android:hint="@string/hint_supplier_nr"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

            <Button
                android:id="@+id/contact_supplier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_supplier" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
